<resources>
    <string name="app_name">Year in Pixels</string> <!-- Mood Chart-->
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_pixels">Year in Pixels</string>
    <string name="action_chart">Mood Graphs</string>
    <string name="action_hexagons">Hexagons</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>

    <string name="change_mood_name">Rename Mood</string>
    <string name="invalid_name">Mood needs valid name.</string>
    <string name="new_mood_name">New mood name</string>

    <string name="reset_color_description">Reset color</string>

    <string name="format_date">%s %s %d</string>
    <string name="question">How did you feel today?</string>

    <string name="add_notes">Add Notes</string>
    <string name="edit_notes">Edit Notes</string>
    <string name="save_notes">Save Notes</string>
    <string name="notes_label">Today\'s Notes</string>

    <string name="month_initial_january">J</string>
    <string name="month_initial_february">F</string>
    <string name="month_initial_march">M</string>
    <string name="month_initial_april">A</string>
    <string name="month_initial_may">M</string>
    <string name="month_initial_june">J</string>
    <string name="month_initial_july">J</string>
    <string name="month_initial_august">A</string>
    <string name="month_initial_september">S</string>
    <string name="month_initial_october">O</string>
    <string name="month_initial_november">N</string>
    <string name="month_initial_december">D</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="label_year_moods">Year Moods</string>
    <string name="label_mood_1">loved</string>
    <string name="label_mood_2">happy</string>
    <string name="label_mood_3">thankful</string>
    <string name="label_mood_4">productive</string>
    <string name="label_mood_5">relaxed</string>
    <string name="label_mood_6">fine</string>
    <string name="label_mood_7">bored</string>
    <string name="label_mood_8">lazy</string>
    <string name="label_mood_9">tired</string>
    <string name="label_mood_10">sad</string>
    <string name="label_mood_11">sick</string>
    <string name="label_mood_12">angry</string>

    <string name="settings_hint_mood_1">Mood 1</string>
    <string name="settings_hint_mood_2">Mood 2</string>
    <string name="settings_hint_mood_3">Mood 3</string>
    <string name="settings_hint_mood_4">Mood 4</string>
    <string name="settings_hint_mood_5">Mood 5</string>
    <string name="settings_hint_mood_6">Mood 6</string>
    <string name="settings_hint_mood_7">Mood 7</string>
    <string name="settings_hint_mood_8">Mood 8</string>
    <string name="settings_hint_mood_9">Mood 9</string>
    <string name="settings_hint_mood_10">Mood 10</string>
    <string name="settings_hint_mood_11">Mood 11</string>
    <string name="settings_hint_mood_12">Mood 12</string>

    <string name="pref_mood_1_color_key">mood_1</string>
    <string name="pref_mood_1_label_key">mood_1_label</string>
    <string name="pref_mood_2_color_key">mood_2</string>
    <string name="pref_mood_2_label_key">mood_2_label</string>
    <string name="pref_mood_3_color_key">mood_3</string>
    <string name="pref_mood_3_label_key">mood_3_label</string>
    <string name="pref_mood_4_color_key">mood_4</string>
    <string name="pref_mood_4_label_key">mood_4_label</string>
    <string name="pref_mood_5_color_key">mood_5</string>
    <string name="pref_mood_5_label_key">mood_5_label</string>
    <string name="pref_mood_6_color_key">mood_6</string>
    <string name="pref_mood_6_label_key">mood_6_label</string>
    <string name="pref_mood_7_color_key">mood_7</string>
    <string name="pref_mood_7_label_key">mood_7_label</string>
    <string name="pref_mood_8_color_key">mood_8</string>
    <string name="pref_mood_8_label_key">mood_8_label</string>
    <string name="pref_mood_9_color_key">mood_9</string>
    <string name="pref_mood_9_label_key">mood_9_label</string>
    <string name="pref_mood_10_color_key">mood_10</string>
    <string name="pref_mood_10_label_key">mood_10_label</string>
    <string name="pref_mood_11_color_key">mood_11</string>
    <string name="pref_mood_11_label_key">mood_11_label</string>
    <string name="pref_mood_12_color_key">mood_12</string>
    <string name="pref_mood_12_label_key">mood_12_label</string>

    <string name="pref_selected_year_key">selected_year</string>
    <string name="pref_year_initialized_key">year_initialized</string>

    <string name="format_year_conclusion">In %d, you\'ve been mostly %s\n(%d%% of the time)</string>
    <string name="format_mood_conclusion_for_year">In %d, you\'ve been %s for a total of %d days.</string>
    <string name="format_zero_mood_conclusion_for_year">In %d, you\'ve never been %s.</string>

</resources>
