<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_year_in_pixels"
            android:icon="@drawable/ic_pixels"
            android:title="@string/action_pixels" />
        <item
            android:id="@+id/nav_graphs"
            android:icon="@drawable/ic_chart"
            android:title="@string/action_chart" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_pie_chart"
            android:title="@string/action_chart" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
