<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TodayActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/selected_mood_color_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="@dimen/spacing"
            android:background="@drawable/sqare_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/mood_1_layout"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="@dimen/spacing"
            android:layout_marginTop="@dimen/spacing"
            android:background="@drawable/color_selector"
            android:padding="@dimen/half_spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selected_mood_color_view">

            <View
                android:id="@+id/mood_1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/sqare_box"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mood_1_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing"
                android:fontFamily="sans-serif"
                android:text="@string/label_mood_1"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/mood_1"
                app:layout_constraintStart_toEndOf="@id/mood_1"
                app:layout_constraintTop_toTopOf="@id/mood_1" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/mood_2_layout"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="@dimen/spacing"
            android:layout_marginTop="@dimen/half_spacing"
            android:background="@drawable/color_selector"
            android:padding="@dimen/half_spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mood_1_layout">

            <View
                android:id="@+id/mood_2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/sqare_box"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mood_2_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing"
                android:fontFamily="sans-serif"
                android:text="@string/label_mood_2"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/mood_2"
                app:layout_constraintStart_toEndOf="@id/mood_2"
                app:layout_constraintTop_toTopOf="@id/mood_2" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/mood_3_layout"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="@dimen/spacing"
            android:layout_marginTop="@dimen/half_spacing"
            android:background="@drawable/color_selector"
            android:padding="@dimen/half_spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mood_2_layout">

            <View
                android:id="@+id/mood_3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/sqare_box"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mood_3_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing"
                android:fontFamily="sans-serif"
                android:text="@string/label_mood_3"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/mood_3"
                app:layout_constraintStart_toEndOf="@id/mood_3"
                app:layout_constraintTop_toTopOf="@id/mood_3" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/mood_4_layout"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="@dimen/spacing"
            android:layout_marginTop="@dimen/half_spacing"
            android:background="@drawable/color_selector"
            android:padding="@dimen/half_spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mood_3_layout">

            <View
                android:id="@+id/mood_4"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/sqare_box"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mood_4_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing"
                android:fontFamily="sans-serif"
                android:text="@string/label_mood_4"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/mood_4"
                app:layout_constraintStart_toEndOf="@id/mood_4"
                app:layout_constraintTop_toTopOf="@id/mood_4" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/mood_5_layout"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="@dimen/spacing"
            android:layout_marginTop="@dimen/half_spacing"
            android:background="@drawable/color_selector"
            android:padding="@dimen/half_spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mood_4_layout">

            <View
                android:id="@+id/mood_5"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/sqare_box"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mood_5_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing"
                android:fontFamily="sans-serif"
                android:text="@string/label_mood_5"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/mood_5"
                app:layout_constraintStart_toEndOf="@id/mood_5"
                app:layout_constraintTop_toTopOf="@id/mood_5" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/mood_6_layout"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="@dimen/spacing"
            android:layout_marginTop="@dimen/half_spacing"
            android:background="@drawable/color_selector"
            android:padding="@dimen/half_spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mood_5_layout">

            <View
                android:id="@+id/mood_6"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/sqare_box"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mood_6_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing"
                android:fontFamily="sans-serif"
                android:text="@string/label_mood_6"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/mood_6"
                app:layout_constraintStart_toEndOf="@id/mood_6"
                app:layout_constraintTop_toTopOf="@id/mood_6" />

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/position_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/mood_6_layout"
            app:layout_constraintTop_toBottomOf="@id/mood_6_layout"
            tools:text="Test" />

        <TextView
            android:id="@+id/daily_mood_id_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/position_text_view"
            tools:text="Test" />

        <TextView
            android:id="@+id/result_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/daily_mood_id_text_view"
            tools:text="Result" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>